[oss-fuzz 6724130142748672] assert in date_Increment()
Ref.:
- https://oss-fuzz.com/testcase-detail/6724130142748672
- https://oss-fuzz.com/testcase-detail/4545468824879104
vlc-demux-dec-libfuzzer-wav: misc/mtime.c:102: vlc_tick_t date_Increment(date_t *, uint32_t): Assertion `p_date->i_remainder < 2*p_date->i_divider_num' failed.
==402== ERROR: libFuzzer: deadly signal
#0 0x5b972c6558e1 in __sanitizer_print_stack_trace /src/llvm-project/compiler-rt/lib/asan/asan_stack.cpp:87:3
#1 0x5b972c547688 in fuzzer::PrintStackTrace() /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerUtil.cpp:210:5
#2 0x5b972c52a1d5 in fuzzer::Fuzzer::CrashCallback() /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerLoop.cpp:231:3
#3 0x781a5179a41f in libpthread.so.0
#4 0x781a5143f00a in __libc_signal_restore_set /build/glibc-LcI20x/glibc-2.31/sysdeps/unix/sysv/linux/internal-signals.h:86:3
#5 0x781a5143f00a in raise /build/glibc-LcI20x/glibc-2.31/sysdeps/unix/sysv/linux/raise.c:48:3
#6 0x781a5141e858 in abort /build/glibc-LcI20x/glibc-2.31/stdlib/abort.c:79:7
#7 0x781a5141e728 in __assert_fail_base /build/glibc-LcI20x/glibc-2.31/assert/assert.c:92:3
#8 0x781a5142ffd5 in __assert_fail /build/glibc-LcI20x/glibc-2.31/assert/assert.c:101:3
#9 0x5b972cc2624e in date_Increment /src/vlc/src/misc/mtime.c:102:9
#10 0x5b972c807b4f in Demux /src/vlc/modules/demux/wav.c:132:5
#11 0x5b972c68e9fb in demux_process_stream /src/vlc/test/src/input/demux-run.c:312:19
#12 0x5b972c68e0ef in LLVMFuzzerTestOneInput /src/vlc/test/vlc-demux-libfuzzer.c:63:5
#13 0x5b972c52b8bd in fuzzer::Fuzzer::ExecuteCallback(unsigned char const*, unsigned long) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerLoop.cpp:619:13
#14 0x5b972c516632 in fuzzer::RunOneTest(fuzzer::Fuzzer*, char const*, unsigned long) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerDriver.cpp:329:6
#15 0x5b972c51c500 in fuzzer::FuzzerDriver(int*, char***, int (*)(unsigned char const*, unsigned long)) /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerDriver.cpp:865:9
#16 0x5b972c548032 in main /src/llvm-project/compiler-rt/lib/fuzzer/FuzzerMain.cpp:20:10
#17 0x781a51420082 in __libc_start_main /build/glibc-LcI20x/glibc-2.31/csu/libc-start.c:308:16
#18 0x5b972c50f71d in _start
Samples:
Edited by Thomas Guillem