core: avoid bogus comparison on large date divider

If i_divider_num > UINT32_MAX/2 when multiplied by 2 it makes a small number
and the assert fails. We use uint64_t comparisons instead.

Fixes #29308